Update look n feel

--- a/plugins/org.bonitasoft.studio.repository.themes.bonitasoft/looknfeels/Default Application/html/process.html
+++ b/plugins/org.bonitasoft.studio.repository.themes.bonitasoft/looknfeels/Default Application/html/process.html
@@ -9,8 +9,8 @@
 	<body class="bonita-body">
 		<div id="bonita-open-solution-logo"></div>
 		<div id="bonita-identification-area">
-			<div id="bonita_username" class="bonita_username"></div> | 
-			<div id="bonita_logout_button" class="bonita_logout_button"></div> | 
+			<div id="bonita_username" class="bonita_username"></div>
+			<div id="bonita_logout_button" class="bonita_logout_button"></div> 
 			<div id="bonita_user_xp_link" class="bonita_user_xp_link"></div>
 		</div>
 		<div id="bonita_process_label" class="bonita_process_label"></div>
