--- a/plugins/org.bonitasoft.studio.repository.themes.bonitasoft/looknfeels/Default Application/application/application/BonitaApplication.html
+++ b/plugins/org.bonitasoft.studio.repository.themes.bonitasoft/looknfeels/Default Application/application/application/BonitaApplication.html
@@ -12,8 +12,12 @@
 	<link rel="shortcut icon" href="pictures/favicon2.ico" type="image/x-icon"/>
 
 	<title>Bonita Portal</title>
-	<script type="text/javascript" language="javascript" src="console.nocache.js"></script>
 	<script type="text/javascript" language="javascript" src="themeResource?theme=default&location=scripts/footer.js"></script>
+	<script type="text/javascript" language="javascript" src="themeResource?theme=default&location=scripts/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" language="javascript" src="themeResource?theme=default&location=scripts/jquery-migrate-1.1.1.min.js"></script>
+	<script type="text/javascript" language="javascript" src="themeResource?theme=default&location=scripts/customInput.jquery.js"></script>
+	<script type="text/javascript" language="javascript" src="themeResource?theme=default&location=scripts/skin.js"></script>
+	<script type="text/javascript" language="javascript" src="console.nocache.js"></script>
 </head>
 
 <body>
@@ -37,6 +41,6 @@
 	</div>
 	<div id="footer">
 		BonitaSoft © 2013 All rights reserved.
-	</div>
+	</div>	
 </body>
 </html>
